force-app/main/default/objects/Violation_Variable__c/Violation_Variable__c.object-meta.xml
<CustomObject>
    <description>The value of the variable as it applies to violations</description>
    <label>Violation Variable</label>
    <nameField>
        <displayFormat>VV-{0000}</displayFormat>
        <label>Violation Variable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Violation Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>