force-app/main/default/objects/Violation_Variable__c/fields/Case_Violation__c.field-meta.xml
<CustomField>
    <fullName>Case_Violation__c</fullName>
    <description>Link to the master case violation that this variable is a part of</description>
    <inlineHelpText>Parent violation to which this variable applies</inlineHelpText>
    <label>Case Violation</label>
    <referenceTo>DIR_Violation__c</referenceTo>
    <relationshipLabel>Violation Variables</relationshipLabel>
    <relationshipName>Violation_Variables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>