force-app/main/default/objects/Violation_Variable__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value captured on the violation wizard. The violation type variable will define the data type and this field will capture the raw value. Only variables with number or currency types can be a part of calculations, but text variables can be used in the description.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>